--- a/work.html
+++ b/work.html
@@ -1,31 +1,15 @@
-<!-- <embed src="file_name.pdf" width="800px" height="2100px" /> -->
-<!-- 
-<a href="Gmail - Your Monday morning trip with Uber.pdf">Gmail - Your Monday morning trip with Uber.pdf</a><br>
-<a href="Purchase Summary _ Delta Air Lines.pdf">Purchase Summary _ Delta Air Lines.pdf</a><br> -->
-
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <title>Title of the document</title>
-  </head>
-  <body>
-    <h1>PDF Example</h1>
-    <p>Open a PDF file <a href="Gmail - Your Monday morning trip with Uber.pdf">Gmail - Your Monday morning trip with Uber.pdf</a>.</p>
-  </body>
-</html> -->
-
 <!DOCTYPE html>
 <html>
   <head>
     <title>Title of the document</title>
   </head>
   <body>
-    <h1><a href="Gmail - Your Monday morning trip with Uber.pdf">Gmail - Your Monday morning trip with Uber.pdf</a></h1><br>
-    <iframe src="Gmail - Your Monday morning trip with Uber.pdf" width="75%" height="500px">
+    <h1><a href="lorem-ipsum.pdf">lorem-ipsum.pdf</a></h1><br>
+    <iframe src="lorem-ipsum.pdf" width="75%" height="500px">
     </iframe>
 
-    <h1><a href="Gmail - Your Monday morning trip with Uber.pdf">Gmail - Your Monday morning trip with Uber.pdf</a></h1><br>
-    <iframe src="Gmail - Your Monday morning trip with Uber.pdf" width="75%" height="500px">
+    <h1><a href="lorem-ipsum.pdf">lorem-ipsum.pdf</a></h1><br>
+    <iframe src="lorem-ipsum.pdf" width="75%" height="500px">
     </iframe>
   </body>
 </html>
