--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title of the document</title>
+    <title>Solving hybrid machine learning tasks by traversing weight space geodesics</title>
   </head>
   <body>
-    <h1><a href="lorem-ipsum.pdf">lorem-ipsum.pdf</a></h1><br>
-    <iframe src="lorem-ipsum.pdf" width="75%" height="500px">
-    </iframe>
+    <div align="center"><h1><a href="lorem-ipsum.pdf">lorem-ipsum.pdf</a></h1><br>
+    <iframe src="lorem-ipsum.pdf" width="75%" height="1000px">
+    </iframe></div>
 
-    <h1><a href="lorem-ipsum.pdf">lorem-ipsum.pdf</a></h1><br>
-    <iframe src="lorem-ipsum.pdf" width="75%" height="500px">
-    </iframe>
+    <div align="center"><h1><a href="lorem-ipsum.pdf">lorem-ipsum.pdf</a></h1><br>
+    <iframe src="lorem-ipsum.pdf" width="75%" height="1000px">
+    </iframe></div>
   </body>
 </html>
