--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 	    <a href="#paper2">Paper 2</a>
 	    <a href="#paper3">Paper 3</a>
 	    <a href="#paper4">Paper 4</a>
+	    <a href="#img1">Figure 1</a>
+	    <a href="#img2">Figure 2</a>
+	    <a href="#img3">Figure 3</a>
+	    <a href="#img4">Figure 4</a>
+	    <a href="#img5">Figure 5</a>
+	    <a href="#img6">Figure 6</a>
 	</nav>
 
     <div id="paper1" align="center"><h1><a href="lorem-ipsum.pdf">lorem-ipsum1.pdf</a></h1><br>
@@ -35,5 +41,23 @@
     <div id="paper4" align="center"><h1><a href="lorem-ipsum.pdf">lorem-ipsum4.pdf</a></h1><br>
     <iframe src="lorem-ipsum.pdf" width="50%" height="1000px">
     </iframe></div>
+    <br>
+    <div id="img1" align="center"><img src="227084852_251156580131501_8703508413290679237_n.png" alt="HTML5 Icon" style="width:950px;height:800px;">
+    </div>
+    <br>
+    <div id="img2" align="center"><img src="229107930_833077647577779_8263208887227866502_n.png" alt="HTML5 Icon" style="width:950px;height:800px;">
+    </div>
+    <br>
+    <div id="img3" align="center"><img src="228177415_352393003156822_5533806212057018902_n.png" alt="HTML5 Icon" style="width:950px;height:800px;">
+    </div>
+    <br>
+    <div id="img4" align="center"><img src="230612086_4531943166824965_5739235860388014765_n.png" alt="HTML5 Icon" style="width:950px;height:800px;">
+    </div>
+    <br>
+    <div id="img5" align="center"><img src="233154268_2035521406617157_3913608433440801825_n.png" alt="HTML5 Icon" style="width:950px;height:800px;">
+    </div>
+    <br>
+    <div id="img6" align="center"><img src="229888022_906877696565786_3858358644697093590_n.png" alt="HTML5 Icon" style="width:950px;height:800px;">
+    </div>
   </body>
 </html>
