--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <title>Solving hybrid machine learning tasks by traversing weight space geodesics</title>
   </head>
   <body>
-  	<nav>
+  	<h1 align="center">Solving hybrid machine learning tasks by traversing weight space geodesics</h1>
+  	<nav align="center">
 	    <a href="#paper1">Paper 1</a>
 	    <a href="#paper2">Paper 2</a>
 	    <a href="#paper3">Paper 3</a>
@@ -26,38 +27,38 @@
 	    <a href="#img6">Figure 6</a>
 	</nav>
 
-    <div id="paper1" align="center"><h1><a href="lorem-ipsum.pdf">lorem-ipsum1.pdf</a></h1><br>
+    <div id="paper1" align="center"><h1><a href="lorem-ipsum.pdf">Paper 1</a></h1><br>
     <iframe src="lorem-ipsum.pdf" width="50%" height="1000px">
     </iframe></div>
     <br>
-    <div id="paper2" align="center"><h1><a href="lorem-ipsum.pdf">lorem-ipsum2.pdf</a></h1><br>
+    <div id="paper2" align="center"><h1><a href="lorem-ipsum.pdf">Paper 2</a></h1><br>
     <iframe src="lorem-ipsum.pdf" width="50%" height="1000px">
     </iframe></div>
     <br>
-    <div id="paper3" align="center"><h1><a href="lorem-ipsum.pdf">lorem-ipsum3.pdf</a></h1><br>
+    <div id="paper3" align="center"><h1><a href="lorem-ipsum.pdf">Paper 3</a></h1><br>
     <iframe src="lorem-ipsum.pdf" width="50%" height="1000px">
     </iframe></div>
     <br>
-    <div id="paper4" align="center"><h1><a href="lorem-ipsum.pdf">lorem-ipsum4.pdf</a></h1><br>
+    <div id="paper4" align="center"><h1><a href="lorem-ipsum.pdf">Paper 4</a></h1><br>
     <iframe src="lorem-ipsum.pdf" width="50%" height="1000px">
     </iframe></div>
     <br>
-    <div id="img1" align="center"><img src="227084852_251156580131501_8703508413290679237_n.png" alt="HTML5 Icon" style="width:950px;height:800px;">
+    <div id="img1" align="center"><img src="227084852_251156580131501_8703508413290679237_n.png" alt="HTML5 Icon" style="width:600px;height:500px;">
     </div>
     <br>
-    <div id="img2" align="center"><img src="229107930_833077647577779_8263208887227866502_n.png" alt="HTML5 Icon" style="width:950px;height:800px;">
+    <div id="img2" align="center"><img src="229107930_833077647577779_8263208887227866502_n.png" alt="HTML5 Icon" style="width:600px;height:500px;">
     </div>
     <br>
-    <div id="img3" align="center"><img src="228177415_352393003156822_5533806212057018902_n.png" alt="HTML5 Icon" style="width:950px;height:800px;">
+    <div id="img3" align="center"><img src="228177415_352393003156822_5533806212057018902_n.png" alt="HTML5 Icon" style="width:600px;height:500px;">
     </div>
     <br>
-    <div id="img4" align="center"><img src="230612086_4531943166824965_5739235860388014765_n.png" alt="HTML5 Icon" style="width:950px;height:800px;">
+    <div id="img4" align="center"><img src="230612086_4531943166824965_5739235860388014765_n.png" alt="HTML5 Icon" style="width:600px;height:500px;">
     </div>
     <br>
-    <div id="img5" align="center"><img src="233154268_2035521406617157_3913608433440801825_n.png" alt="HTML5 Icon" style="width:950px;height:800px;">
+    <div id="img5" align="center"><img src="233154268_2035521406617157_3913608433440801825_n.png" alt="HTML5 Icon" style="width:600px;height:500px;">
     </div>
     <br>
-    <div id="img6" align="center"><img src="229888022_906877696565786_3858358644697093590_n.png" alt="HTML5 Icon" style="width:950px;height:800px;">
+    <div id="img6" align="center"><img src="229888022_906877696565786_3858358644697093590_n.png" alt="HTML5 Icon" style="width:600px;height:500px;">
     </div>
   </body>
 </html>
