--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	    <a href="#img6">Figure 6</a>
 	</nav>
 
-    <div id="paper1" align="center"><h1><a href="lorem-ipsum.pdf">Paper 1</a></h1><br>
-    <iframe src="lorem-ipsum.pdf" width="50%" height="1000px">
+    <div id="paper1" align="center"><h1><a href="Geodesics_highperformancePaths.pdf">Geodesics lead to path of high performance networks</a></h1><br>
+    <iframe src="Geodesics_highperformancePaths.pdf" width="50%" height="1000px">
     </iframe></div>
     <br>
     <div id="paper2" align="center"><h1><a href="lorem-ipsum.pdf">Paper 2</a></h1><br>
