--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
   <body>
   	<h1 align="center">Solving hybrid machine learning tasks by traversing weight space geodesics</h1>
   	<nav align="center">
-	    <a href="#paper1">Paper 1</a>
-	    <a href="#paper2">Paper 2</a>
-	    <a href="#paper3">Paper 3</a>
-	    <a href="#paper4">Paper 4</a>
-	    <a href="#img1">Figure 1</a>
-	    <a href="#img2">Figure 2</a>
-	    <a href="#img3">Figure 3</a>
-	    <a href="#img4">Figure 4</a>
-	    <a href="#img5">Figure 5</a>
-	    <a href="#img6">Figure 6</a>
+	    <a href="#paper1">Geodesics - high performance paths</a><br>
+	    <a href="#paper2">Our algorithm - finding geodesics</a><br>
+	    <a href="#paper3">Paper 3</a><br>
+	    <a href="#paper4">Paper 4</a><br>
+	    <a href="#img1">Figure 1</a><br>
+	    <a href="#img2">Figure 2</a><br>
+	    <a href="#img3">Figure 3</a><br>
+	    <a href="#img4">Figure 4</a><br>
+	    <a href="#img5">Figure 5</a><br>
+	    <a href="#img6">Figure 6</a><br>
 	</nav>
 
     <div id="paper1" align="center"><h1><a href="Geodesics_highperformancePaths.pdf">Geodesics lead to path of high performance networks</a></h1><br>
     <iframe src="Geodesics_highperformancePaths.pdf" width="50%" height="1000px">
     </iframe></div>
     <br>
-    <div id="paper2" align="center"><h1><a href="lorem-ipsum.pdf">Paper 2</a></h1><br>
+    <div id="paper2" align="center"><h1><a href="lorem-ipsum.pdf">Our algorithm - finding geodesics</a></h1><br>
     <iframe src="lorem-ipsum.pdf" width="50%" height="1000px">
     </iframe></div>
     <br>
