--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <iframe src="Geodesics_highperformancePaths.pdf" width="50%" height="1000px">
     </iframe></div>
     <br>
-    <div id="paper2" align="center"><h1><a href="lorem-ipsum.pdf">Our algorithm - finding geodesics</a></h1><br>
-    <iframe src="lorem-ipsum.pdf" width="50%" height="1000px">
+    <div id="paper2" align="center"><h1><a href="algorithm_approximates_geodesics.pdf">Our algorithm finds geodesic paths (approximately)</a></h1><br>
+    <iframe src="algorithm_approximates_geodesics.pdf" width="50%" height="1000px">
     </iframe></div>
     <br>
     <div id="paper3" align="center"><h1><a href="lorem-ipsum.pdf">Paper 3</a></h1><br>
