--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
   <body>
   	<h1 align="center">Solving hybrid machine learning tasks by traversing weight space geodesics</h1>
   	<nav align="center">
-	    <a href="#paper1">Geodesics - high performance paths</a><br>
-	    <a href="#paper2">Our algorithm - finding geodesics</a><br>
-	    <a href="#paper3">Paper 3</a><br>
-	    <a href="#paper4">Paper 4</a><br>
+	    <a href="#Geodesics_highperformancePaths">Geodesics - high performance paths</a><br>
+	    <a href="#algorithm_approximates_geodesics">Our algorithm - finding geodesics</a><br>
 	    <a href="#img1">Figure 1</a><br>
 	    <a href="#img2">Figure 2</a><br>
 	    <a href="#img3">Figure 3</a><br>
@@ -27,20 +25,12 @@
 	    <a href="#img6">Figure 6</a><br>
 	</nav>
 
-    <div id="paper1" align="center"><h1><a href="Geodesics_highperformancePaths.pdf">Geodesics lead to path of high performance networks</a></h1><br>
+    <div id="Geodesics_highperformancePaths" align="center"><h1><a href="Geodesics_highperformancePaths.pdf">Geodesics lead to path of high performance networks</a></h1><br>
     <iframe src="Geodesics_highperformancePaths.pdf" width="50%" height="1000px">
     </iframe></div>
     <br>
-    <div id="paper2" align="center"><h1><a href="algorithm_approximates_geodesics.pdf">Our algorithm finds geodesic paths (approximately)</a></h1><br>
+    <div id="algorithm_approximates_geodesics" align="center"><h1><a href="algorithm_approximates_geodesics.pdf">Our algorithm finds geodesic paths (approximately)</a></h1><br>
     <iframe src="algorithm_approximates_geodesics.pdf" width="50%" height="1000px">
-    </iframe></div>
-    <br>
-    <div id="paper3" align="center"><h1><a href="lorem-ipsum.pdf">Paper 3</a></h1><br>
-    <iframe src="lorem-ipsum.pdf" width="50%" height="1000px">
-    </iframe></div>
-    <br>
-    <div id="paper4" align="center"><h1><a href="lorem-ipsum.pdf">Paper 4</a></h1><br>
-    <iframe src="lorem-ipsum.pdf" width="50%" height="1000px">
     </iframe></div>
     <br>
     <div id="img1" align="center"><img src="227084852_251156580131501_8703508413290679237_n.png" alt="HTML5 Icon" style="width:600px;height:500px;">
