--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	    <a href="#img4">Figure 4</a><br>
 	    <a href="#img5">Figure 5</a><br>
 	    <a href="#img6">Figure 6</a><br>
+	    <a href="#img7">Figure 7</a><br>
 	</nav>
 
     <div id="Geodesics_highperformancePaths" align="center"><h1><a href="Geodesics_highperformancePaths.pdf">Geodesics lead to path of high performance networks</a></h1><br>
@@ -49,6 +50,9 @@
     </div>
     <br>
     <div id="img6" align="center"><img src="229888022_906877696565786_3858358644697093590_n.png" alt="HTML5 Icon" style="width:600px;height:500px;">
+    </div>
+    <br>
+    <div id="img7" align="center"><img src="229888022_906877696565786_3858358644697093590_n.png" alt="HTML5 Icon" style="width:600px;height:500px;">
     </div>
   </body>
 </html>
