--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div id="img6" align="center"><img src="229888022_906877696565786_3858358644697093590_n.png" alt="HTML5 Icon" style="width:600px;height:500px;">
     </div>
     <br>
-    <div id="img7" align="center"><img src="229888022_906877696565786_3858358644697093590_n.png" alt="HTML5 Icon" style="width:600px;height:500px;">
+    <div id="img7" align="center"><img src="Screen Shot 2021-08-27 at 12.10.34 PM.png" alt="HTML5 Icon" style="width:600px;height:500px;">
     </div>
   </body>
 </html>
